# agent-client-kernel

./: .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  acp.trace  agent-client-kernel.code-workspace  batch pi.ipynb  broadway.ipynb  codex-configuration.ipynb  codex-qwen3-golden.ipynb  generate_image.py  generate_image_ollama.py  golden.ipynb  golden_fractal.py  jupyter mcp fail.ipynb  lmstudio agent.ipynb  notebooks.json  oscilloscope maker.ipynb  package-lock.json  package.json  pi test 2 output.txt  pi test 2.ipynb  pi test 3 output.txt  pi test 3.ipynb  pi test 4 output.txt  pi test 4.ipynb  pi test 5.ipynb  pi test 6 output.txt  pi test 6.ipynb  pi test 7 output.txt  pi test 7.ipynb  pi test 8 output.txt  pi test 8.ipynb  pi test output.txt  pi test.ipynb  pi-agent-dev-chat.md  pyproject.toml  sum agent.ipynb  sum.ipynb  (+1 more)
.codex/: config.toml  user-config.toml
.codex/model-catalogs/: local-lmstudio.json
.codex/model_catalogs/: local-lmstudio.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cagent/: Dockerfile  devcontainer.json
.devcontainer/codex/: Dockerfile  agent-versions.json  devcontainer.json
.devcontainer/codex-dockerfile/: Dockerfile  devcontainer.json
.devcontainer/codex/before-notebook.d/: 10-lmstudio-shim.sh
.devcontainer/gemini/: Dockerfile  devcontainer.json
.devcontainer/goose/: Dockerfile  devcontainer.json
.devcontainer/kimi/: Dockerfile  devcontainer.json
.devcontainer/openhands/: Dockerfile  Dockerfile-uv  devcontainer.json
.devcontainer/pi/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  poetry-pypi.yml  release.yml
.pi/agent/: mcp.json  models.json  settings.json
agent_client_kernel/: __init__.py  __main__.py  kernel.py  lmstudio_shim.py
agent_client_kernel/magics/: __init__.py  agent_config_magic.py  agent_magic.py  mcp_magic.py  permissions_magic.py  session_magic.py
docs/: codex-lmstudio-shim.md  copilot-chat.md  golden-notebook-newlines-postmortem.md  jupyter-mcp-server-breaks-cell-execution.md  mcp-config-and-slash-commands.md
examples/: ASCII ART.ipynb  basic_usage.ipynb  cat.ipynb  function_plotter.ipynb  golden-ratio.ipynb  jupyter-mcp.ipynb  matplotlib_functions.ipynb  openhands.ipynb  oscilloscope.ipynb  paper-search.ipynb  rubiks_cube_combinatorics.ipynb  tiger_run.ipynb  weather_map.ipynb
scripts/: agent-versions.json  codex_configure.py  install-acp-agents.sh  lmstudio-shim.py  start-lmstudio-shim.sh  update-agent-versions.py
tests/: conftest.py  test_acp_client.py  test_iopub_stream.py  test_kernel.py  test_lmstudio_shim.py  test_lmstudio_shim_hook.py  test_lmstudio_shim_mcp.py  test_lmstudio_shim_protocol.py  test_magic_commands.py
tests/e2e/: __init__.py  test_golden_notebook_e2e.py  test_jupyter_startup.py  test_kernel_iopub_live.py  test_lmstudio_shim_subprocess.py  test_pi_acp_chunk_deltas.py  test_pi_acp_duplication_probe.py  test_pi_acp_integration.py  test_pi_browser_open.py
