[project]
name = "agent-client-kernel"
version = "0.4.1"
description = "A Jupyter Kernel implementing the Agent Client Protocol"
authors = [
    { name = "Jim White", email = "jim@fovi.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["ACP", "agent", "IPython", "Jupyter", "kernel"]
requires-python = ">=3.10"
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ipykernel>=7.0",
    "jupyter-client>=8.5",
    "agent-client-protocol>=0.7",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "jupyter-mcp-tools",
    "jupyter-mcp-server",
    "jupyter-collaboration"
]

# conda install -c conda-forge ipympl

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/wiki3-ai/agent-client-kernel"
Repository = "https://github.com/wiki3-ai/agent-client-kernel"

[project.scripts]
jupyter-agent-client-kernel = "agent_client_kernel.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "agent_client_kernel",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
