[project]
name = "agent-client-kernel"
version = "0.4.1"
description = "A Jupyter Kernel implementing the Agent Client Protocol"
authors = [
    { name = "Jim White", email = "jim@fovi.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["ACP", "agent", "IPython", "Jupyter", "kernel"]
requires-python = ">=3.10"
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ipykernel>=7.0",
    "jupyter-client>=8.5",
    "agent-client-protocol @ git+https://github.com/agentclientprotocol/python-sdk.git",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    # "jupyter-ai",
    # Required by the standalone `uvx jupyter-mcp-server` process so its
    # cell-mutation tools (insert_cell, overwrite_cell_source, ...) can
    # reach the YDoc collaboration endpoint at
    # /api/collaboration/session/<path>. Without it every MCP cell-write
    # 404s and the agent falls back to hand-rolling nbformat JSON, which
    # frequently produces malformed (single-line) cells.
    "jupyter-collaboration",
    # https://github.com/openags/paper-search-mcp
    # Install with `pip install paper-search-mcp`
    "paper-search-mcp",
]

# Note: jupyter-mcp-server is intentionally NOT a runtime dependency.
# Codex launches it standalone via `uvx jupyter-mcp-server@latest` (see
# AGENTS.md). Do NOT add jupyter-mcp-server or jupyter-mcp-tools here:
# they pull in the Datalayer alpha `jupyter-server-nbmodel` server
# extension, which hijacks cell execution in JupyterLab and breaks both
# this kernel and python3. The official `jupyter-collaboration` package
# above provides the YDoc endpoint the MCP server needs without that
# side effect.

# conda install -c conda-forge ipympl

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/wiki3-ai/agent-client-kernel"
Repository = "https://github.com/wiki3-ai/agent-client-kernel"

[project.scripts]
jupyter-agent-client-kernel = "agent_client_kernel.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "agent_client_kernel",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "live_e2e: end-to-end test against a live stack (LM Studio + lmstudio_shim + Jupyter Lab with jupyter-collaboration + Codex). Skipped unless ACK_GOLDEN_E2E=1.",
]
